--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,34 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  align-items: center;
+  flex-direction: column;
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.Menu, .Quiz, .endScreen, .Summary{
+  width: 500px;
+  height: 600px;
+  border-radius: 10px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  background-color: lightseagreen;
+  align-items: center;
+}
+.Menu, .Quiz, .endScreen, .Summary{
+  color: #fff;
+}
+.Menu button, .Quiz button, .Summary button{
+  width: 300px;
+  height: 50px;
+  border-radius: 5px;
+  border: none;
+  margin: 5px;
+  font-size: 20px;
+  cursor: pointer; 
+}
+.Quiz button:focus{
+  background: #10526e;
+  color: #fff;
 }
